--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hta-drop-target",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "make a drop target in the document of HTA(HTML Application), which can recieve a dragged and dropped file (or a folder) from Windows Explorer",
   "main": "./release/hta-drop-target.esm.js",
   "browser": "./release/hta-drop-target.esm.js",
@@ -29,5 +29,13 @@
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^5.3.0"
+  },
+  "bugs": {
+    "url": "https://github.com/gitcobra/hta-drop-target/issues"
+  },
+  "homepage": "https://github.com/gitcobra/hta-drop-target#readme",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:gitcobra/hta-drop-target.git"
   }
 }
