allow dropping file for ie6

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ver-update": "node ./script/version.js"
   },
   "keywords": [
-    "HTA"
+    "HTA",
+    "windows"
   ],
   "author": "gitcobra <gitpython@outlook.jp>",
   "license": "ISC",
